fix(core): make css screenreader-only actually invisible

--- a/packages/core/src/css/accessibility.css
+++ b/packages/core/src/css/accessibility.css
@@ -1,5 +1,7 @@
 .psds-screenreader-only {
   position: absolute;
+  top: auto;
+  left: -10000px;
   width: 1px;
   height: 1px;
   padding: 0;
